src/test/ui/feature-gates/feature-gate-link_cfg.stderr
error[E0658]: #[link(cfg(...))] is feature gated (see issue #37406)
  --> $DIR/feature-gate-link_cfg.rs:1:1
   |
LL | #[link(name = "foo", cfg(foo))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(link_cfg)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
